# mjd_ego_planner

./: README.md  readme
src/: 2
src/Btraj/: CMakeLists.txt  package.xml
src/Btraj/include/: a_star.h  data_type.h  utils.h
src/Btraj/launch/: bruno.launch  real.launch  simulation.launch  simulator.xml
src/Btraj/src/: a_star.cpp  b_traj_node.cpp  random_forest_sensing.cpp  traj_server.cpp  trajectory_generator.cpp
src/VINS-Fusion/config/realsense_d435i/: realsense_stereo_imu_config.yaml
src/VINS-Fusion/global_fusion/src/: globalOpt.cpp  globalOpt.h  globalOptNode.cpp
src/VINS-Fusion/vins_estimator/config/realsense_d435i/: realsense_stereo_imu_config.yaml
src/VINS-Fusion/vins_estimator/src/estimator/: estimator.cpp
src/VINS-Fusion/vins_estimator/src/utility/: visualization.cpp
src/controller/djiros/launch/: djiros.launch
src/dji_sdk/launch/: sdk.launch
src/dji_sdk/src/modules/: dji_sdk_node.cpp  dji_sdk_node_publisher.cpp
src/mjd_fusion/: CMakeLists.txt  package.xml  readme
src/mjd_fusion/config/: fusion_node.rviz  traj.rviz
src/mjd_fusion/data/: plot.py
src/mjd_fusion/launch/: device.launch  fusion.launch  start_all.launch
src/mjd_fusion/scripts/: talker.py
src/mjd_fusion/src/: Factors.h  globalOpt.h  gps_tra.cpp
src/mosek_study/: CMakeLists.txt  package.xml
src/mosek_study/bezier/: bezier_traj.cpp  bezier_traj.h
src/mosek_study/launch/: bezier_traj.launch
src/mosek_study/src/: b_spline.cpp  bezier.cpp  bezier_minimumjerk_node.cpp  mosek_test.cpp
src/ooqp_study/: CMakeLists.txt  package.xml
src/ooqp_study/date/: bezier_data.txt  bezier_minimum_data.txt  bezier_plot.py  data.txt  data_plot.py
src/ooqp_study/launch/: main_node.launch
src/ooqp_study/script/: data_plot.py
src/ooqp_study/src/: main.cpp  minimum_jerk.cpp  test1.cpp
src/ooqp_study/src/trajectory_generator/: trajectory_generator.cpp  trajectory_generator.h
src/planner/plan_env/include/plan_env/: grid_map.h
src/planner/plan_env/src/: grid_map.cpp
src/planner/plan_manage/launch/: default.rviz  real.launch  simple_run.launch
src/planner/plan_manage/src/: ego_replan_fsm.cpp  planner_manager.cpp
src/realsense2_camera/launch/: rs_camera2.launch
src/rosmsg_tcp_bridge/: CMakeLists.txt  package.xml
src/rosmsg_tcp_bridge/launch/: bridge.launch
src/rosmsg_tcp_bridge/src/: bridge_node.cpp
src/uav_simulator/Utils/waypoint_generator/src/: sample_waypoints.h  waypoint_generator.cpp
